@@ -1,3 +1,7 @@
+Wed Sep 24 17:30:01 2008  Koichi Sasada  <ko1@atdot.net>
+
+	* common.mk: fix ricsin.rb path.
+
 Wed Sep 24 14:47:29 2008  Koichi Sasada  <ko1@atdot.net>
 
 	* ricsin/ricsin.rb: moved from tool/ricsin.rb.
